updating create requests

--- a/api/reference/virtual_templates.adoc
+++ b/api/reference/virtual_templates.adoc
@@ -43,13 +43,11 @@ POST /api/virtual_templates
 [source,json]
 ----
 {
-  "name": "withapi",
-  "vendor": "amazon",
-  "location": "location",
-  "cloud_network_id": "network",
-  "cloud_subnet_id": "subnet",
-  "availability_zone_id": "subnet",
-  "ems_ref": "image-id"
+    "name": "virtual_template1",
+    "vendor": "amazon",
+    "cloud_subnet_id": "300",
+    "availability_zone_id": "245",
+    "type":"ManageIQ::Providers::Amazon::CloudManager::VirtualTemplate"
 }
 ----
 
@@ -63,18 +61,16 @@ or creating multiple virtual templates:
     {
       "name": "virtual_template1",
       "vendor": "amazon",
-      "location": "location",
-      "cloud_subnet_id": "network",
-      "availability_zone_id": "subnet",
-      "ems_ref": "image-id"
+      "cloud_subnet_id": "300",
+      "availability_zone_id": "245",
+      "type":"ManageIQ::Providers::Amazon::CloudManager::VirtualTemplate"
     },
     {
       "name": "virtual_template2",
       "vendor": "google",
-      "location": "location",
-      "cloud_subnet_id": "network",
-      "availability_zone_id": "subnet",
-      "ems_ref": "image-id"
+      "cloud_subnet_id": "345",
+      "availability_zone_id": "562",
+      "type":"ManageIQ::Providers::Google::CloudManager::VirtualTemplate"
     }
   ]
 }
