Added documentation and images on the new Cloud tabs to the cfme GitHub repo

--- a/doc-Managing_Infrastructure_and_Inventory/cfme/master.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/cfme/master.adoc
@@ -46,6 +46,10 @@ include::topics/Tenants.adoc[]
 
 
 :leveloffset: 1
+include::topics/Volumes.adoc[]
+
+
+:leveloffset: 1
 include::topics/Flavors.adoc[]
 
 
@@ -55,3 +59,15 @@ include::topics/Security_Groups.adoc[]
 
 :leveloffset: 1
 include::topics/Instances.adoc[]
+
+
+:leveloffset: 1
+include::topics/Stacks.adoc[]
+
+
+:leveloffset: 1
+include::topics/Key_Pair.adoc[]
+
+
+:leveloffset: 1
+include::topics/Object_Stores.adoc[]
