--- a/doc-Managing_Infrastructure_and_Inventory/miq/index.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/miq/index.adoc
@@ -46,6 +46,10 @@ include::doc-Managing_Infrastructure_and_Inventory/miq/topics/Tenants.adoc[]
 
 
 :leveloffset: 1
+include::doc-Managing_Infrastructure_and_Inventory/miq/topics/Volumes.adoc[]
+
+
+:leveloffset: 1
 include::doc-Managing_Infrastructure_and_Inventory/miq/topics/Flavors.adoc[]
 
 
@@ -55,3 +59,15 @@ include::doc-Managing_Infrastructure_and_Inventory/miq/topics/Security_Groups.ad
 
 :leveloffset: 1
 include::doc-Managing_Infrastructure_and_Inventory/miq/topics/Instances.adoc[]
+
+
+:leveloffset: 1
+include::doc-Managing_Infrastructure_and_Inventory/miq/topics/Stacks.adoc[]
+
+
+:leveloffset: 1
+include::doc-Managing_Infrastructure_and_Inventory/miq/topics/Key_Pair.adoc[]
+
+
+:leveloffset: 1
+include::doc-Managing_Infrastructure_and_Inventory/miq/topics/Object_Stores.adoc[]
