Deleted 2 duplicate sections in Instances chapter; fixed some typos and missing punctuation, a bit of grammar.

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Analyzing_Instances_and_Images.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Analyzing_Instances_and_Images.adoc
@@ -1,8 +1,8 @@
-= Analyzing Instances and Images
+= Analyzing Instances and Images with SmartState Analysis
 
 Analyze an instance to collect metadata such as user accounts, applications, software patches, and other internal information.
 If {product-title} is not set up for automatic analysis, perform a manual analysis of an instance.
-To perform a SmartState Analysis, {product-title} requires a running SmartProxy with visibility to the instance's storage location.
+To perform a SmartState Analysis, {product-title} requires a running SmartProxy with visibility to the instance's storage location so that a snapshot can be created.
 
 . Navigate to menu:Compute[Clouds > Instances].
 . Click the accordion for the items to analyze.
@@ -26,5 +26,9 @@ To perform a SmartState Analysis, {product-title} requires a running SmartProxy 
 ======
 
 
-
-
+[IMPORTANT]
+======
+SmartState Analysis for instances runs as a process independent from providers.
+For example, a successful SmartState Analysis of a host does not mean SmartState Analysis for instances will be successful.
+Ensure to enter credentials for the provider that contains the instance for the SmartState Analysis to work.
+======
