--- a/doc-Managing_Infrastructure_and_Inventory/topics/Changing_the_Summary_View_of_an_Instance_or_Image.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Changing_the_Summary_View_of_an_Instance_or_Image.adoc
@@ -1,6 +1,6 @@
 = Changing the Summary View of an Instance or Image
 
-View the timeline of events for an instance or image if registered to a Host.
+View the timeline of events for an instance or image if registered to a host.
 
 . Navigate to menu:Compute[Clouds > Instances].
 . Click the instance to view the timeline.
