--- a/doc-Managing_Infrastructure_and_Inventory/topics/Extracting_Running_Processes_from_Instances_and_Images.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Extracting_Running_Processes_from_Instances_and_Images.adoc
@@ -6,7 +6,7 @@ The instance must be running and must have an IP address in the VMDB, usually ob
 
 . Navigate to menu:Compute[Clouds > Instances].
 . Click the checkboxes for the instances to collect processes.
-. Click  image:1847.png[] (*Configuration*), and then  image:2152.png[](*Extract Running Processes*) on the Taskbar.
+. Click  image:1847.png[] (*Configuration*), and then  image:2152.png[](*Extract Running Processes*) on the taskbar.
 . Click *OK*.
 
 
