--- a/doc-Managing_Infrastructure_and_Inventory/topics/Instance_or_Image_Summary.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Instance_or_Image_Summary.adoc
@@ -1,9 +1,9 @@
-= Instance or Image Summary
+= Viewing the Instance or Image Summary
 
-When you click on a specific instance or image, you will see the *Virtual Thumbnail*, and an `operating system-specific` screen of the item, called the *Summary*.
-Where applicable, click on a subcategory of the *Summary* to see more detail on that section. 
+When you click on a specific instance or image, you will see the *Virtual Thumbnail*, and an operating system-specific summary screen of the item.
+Where applicable, click on a subcategory of the summary to see more detail on that section. 
 
-NOTE: When you perform a SmartState Analysis on an instance or image, you get more detailed information in these categories: 
+The summary page contains the following categories:
 
 * *Properties* include information such as the base operating system, hostname, IP addresses, instance vendor, cloud resources, and snapshots.
   This includes the ability to analyze multiple partitions, multiple disks, Linux logical volumes, extended partitions, and Windows drives.
@@ -21,3 +21,5 @@ NOTE: When you perform a SmartState Analysis on an instance or image, you get mo
   This section changes depending on the base operating system. 
 * *Diagnostics* provides a link to viewing running processes and the information from the latest collected event logs. 
 * *Smart Management* shows all tags assigned to this instance. 
+
+Performing a SmartState Analysis on an instance or image provides more detailed information in these categories.
