--- a/doc-Managing_Infrastructure_and_Inventory/topics/Removing_Instances_and_Images_from_the_VMDB.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Removing_Instances_and_Images_from_the_VMDB.adoc
@@ -1,7 +1,7 @@
 = Removing Instances and Images from the VMDB
 
 If an instance has been decommissioned or you need to perform some troubleshooting, you might need to remove a specific instance from the VMDB.
-This does not however remove the instance or image from its Provider.
+This does not however remove the instance or image from its provider.
 
 . Navigate to menu:Compute[Clouds > Instances].
 . Click the accordion for the items to remove.
