--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_the_Instance_or_Image_Timeline.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_the_Instance_or_Image_Timeline.adoc
@@ -1,6 +1,6 @@
 = Viewing the Instance or Image Timeline
 
-View the timeline of events for an instance or image if registered to a Host.
+View the timeline of events for an instance or image if registered to a host.
 
 . Navigate to menu:Compute[Clouds > Instances].
 . Click the instance to view the timeline.
