a few minor typo fixes

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Volumes.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Volumes.adoc
@@ -1,7 +1,7 @@
 [[volumes]]
 = Volumes
 
-A volume is a block storage device that you can attach to an instance. In the Volumes tab, you can add a new cloud volume, see list of all cloud volumes with information about each volume, including its Name, Size, Status, Type, Bootable, Availability Zones, and Cloud Provider. Click on a cloud volume to see a summary of the volume. On that screen, you can see which instance is curently using the volume under Relationships; also see their snapshot. More importantly, you can attach selected cloud volume to an instance, or detach it. Also, you can edit or delete a selected volume.
+A volume is a block storage device that you can attach to an instance. In the *Volumes* tab, you can add a new cloud volume, or list all cloud volumes with information including each volume's Name, Size, Status, Type, if it is Bootable, Availability Zones, and Cloud Provider. Click on a cloud volume to see a summary of the volume. On that screen, you can see which instance is currently using the volume under Relationships, and also see its snapshot. More importantly, you can attach or detach a cloud volume to an instance, and edit or delete a selected volume.
 
 :leveloffset: 2
 include::Adding_New_Cloud_Volume.adoc[]
