--- a/doc-Managing_Infrastructure_and_Inventory/topics/Attaching_Cloud_Volume_to_an_Instance.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Attaching_Cloud_Volume_to_an_Instance.adoc
@@ -4,5 +4,5 @@
 . Select the cloud volume you want to attach to an instance.
 . Click  image:1847.png[] (*Configuration*), then click  image:volume-icon.png[] (*Attach selected Cloud Volume to an Instance*).
 . Specify the instance you want to attach the selected cloud volume to from the *Instance* list.
-. Specify the *Device Mountpoint* which is optional. 
+. Specify the *Device Mountpoint* (optional). 
 . Click *Attach*.
