--- a/doc-Managing_Infrastructure_and_Inventory/topics/Key_Pair.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Key_Pair.adoc
@@ -1,7 +1,7 @@
 [[key-pair]]
 = Key Pairs
 
-This tab lists key pairs and its fingerprint for all cloud providers. Click on a key pair to see a summary and its relationship with instances. On this screen, click on instances to see details of all instances the key pair relates to. You can use the key pairs added during provisioning instances.
+This tab lists key pairs and fingerprints for all cloud providers. Click on a key pair to see a summary and its relationship with instances. On this screen, click on instances to see details of all instances the key pair relates to. You can use the key pairs added during provisioning instances.
 
 [NOTE]
 ======
