removed two references to CF guides, added markup for properties fields in Volumes:

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Orchestration_Stacks.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Orchestration_Stacks.adoc
@@ -1,7 +1,6 @@
 = Tagging Orchestration Stacks
 
-Apply tags to orchestration stacks to categorize them together at the same time. You can create tags using the instructions in the https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/general-configuration/general-configuration[General Configuration] guide.
-
+Apply tags to orchestration stacks to categorize them together at the same time. 
 . Navigate to menu:Compute[Clouds > Stacks]. 
 . Select the orchestration stacks to tag. 
 . Click  image:1941.png[Policy] (*Policy*), and then image:2158.png[Edit Tags] (*Edit Tags*). 
