--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Object_Stores.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Object_Stores.adoc
@@ -1,6 +1,6 @@
 = Tagging Object Stores 
 
-Apply tags to object stores to categorize them together at the same time. You can create tags using the instructions in the https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/general-configuration/general-configuration[General Configuration] guide.
+Apply tags to object stores to categorize them together at the same time.
 
 . Navigate to menu:Compute[Clouds > Object Stores]. 
 . Select the object stores to tag. 
