Adding updates to Chargeback section for 4.1

--- a/doc-Monitoring_Alerts_and_Reporting/topics/Chargeback_Rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Chargeback_Rates.adoc
@@ -4,6 +4,18 @@
 
 Chargeback costs are computed using a set formula based on hourly cost per unit and hourly usage.
 
+Chargeback can be calculated in the following currencies:
+
+* United States Dollars (USD)
+* Euro (EUR)
+* Pound Sterling (GBP)
+* Japanese Yen (JPY)
+
+Chargeback rates can be assigned at a single rate or by tiers, where rates are assigned in ranges depending on level of usage.
+
+Additionally, chargeback can be calculated at one fixed rate, or by a combination of fixed and variable rates per tier. Fixed rates are charged once per unit of time, and the variable rate is calculated by the level of usage multiplied by the number of resources used in a unit of time.
+
+
 == Memory Used Cost
 
 Calculating the Memory Used Cost in dollars ($) for a day can be expressed in the following ways:
@@ -11,6 +23,9 @@ Calculating the Memory Used Cost in dollars ($) for a day can be expressed in th
 * Memory allocation per hour (in MB) * Hourly Allocation cost per megabyte * Number of Memory Allocation metrics available for the day
 * Sum of Memory allocation for the day (in MB) * Hourly Allocation cost per megabyte
 * Sum of Memory allocation for the day (in MB) * Daily Allocation cost per megabyte / 24
+
+Memory costs can be measured in B, KB, MB, GB, or TB.
+
 
 .Memory Used Cost
 [example]
@@ -23,7 +38,8 @@ In a scenario where 9.29 GB of memory is used in a day with the chargeback rate 
 
 == CPU Total Cost
 
-The CPU Total Cost is defined as the number of virtual CPUs over the selected interval (hour, day, week, month).
+The CPU Total Cost is defined as the number of virtual CPUs over the selected interval (hour, day, week, month). CPU costs can be measured in units of Hz, KHz, MHz, GHz, or THz, as specified when creating a chargeback rate.
+
 
 .CPU Total Cost
 ======
@@ -46,7 +62,7 @@ In a scenario where 2.5 GHz is used in a day with the chargeback rate set at $0.
 
 == Storage Allocated Cost
 
-The Storage Allocated Cost is defined as the Allocated Disk Storage in bytes over the selected rate interval (hour, day, week, month).
+The Storage Allocated Cost is defined as the Allocated Disk Storage in bytes over the selected rate interval (hour, day, week, month). Storage costs can be measured in B, KB, MB, GB, or TB.
 
 .Storage Allocated Cost
 ======
@@ -79,4 +95,3 @@ In a scenario where 250 GB are used in a day with the chargeback rate set at $0.
 * 268,435,456,000 bytes = 250 GB
 * 250 GB * $0.10 (per GB per day) = $25 Storage Used Cost
 ======
-
