--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
@@ -8,9 +8,9 @@ Click the *Assignments* accordion, and click either *Compute* or *Storage*.
 
 
 * Use *Compute* to assign a compute chargeback rate.
-  You can assign chargeback rates to *The Enterprise*, *Selected Clusters*, *Selected Infrastructure Providers*, or *Tagged VMs and Instances*.
+  You can assign chargeback rates to *The Enterprise*, *Selected Clusters*, *Selected Infrastructure Providers*, *Tagged VMs and Instances*, or *Tenants*.
 * Use *Storage* to assign a storage chargeback rate.
-. You can assign chargeback rates to *The Enterprise*, *Selected Datastores*, or *Tagged Datastores*.
+. You can assign chargeback rates to *The Enterprise*, *Selected Datastores*, *Tagged Datastores*, or *Tenants*.
 . From the *Basic Info* area, use the *Assign To* list to select a type of assignee to assign the rate set to.
   The options displayed vary based on the type you selected.
 . For each item to set, select the chargeback rate to use.
@@ -25,4 +25,3 @@ When viewing chargeback, there is a rate for a virtual machine for the number of
 The chargeback for this parameter is calculated based on when the virtual machine is running.
 If the virtual machine is not running, then it is not charged for CPU allocation.
 ======
-
