added new screenshot to show default being used as name, added markup

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -551,8 +551,8 @@ To create a default analysis profile:
 . Click on the *Settings* accordion, then click *Analysis Profiles*.
 . Click on the analysis profile you want to set as the default.
 . Click image:1851.png[] (*Edit the selected Analysis Profile*).
-. For a virtual machine profile, enter default in lower case in *Name*. For a host profile, enter host default.
-image:2056.png[]
+. For a virtual machine profile, enter `default` in lower case in *Name*. For a host profile, enter host default.
+image:set_default_analysis_profile.png[]
 . Click *Save*.
 
 
