Minor peer review edit

--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_chargeback_rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_chargeback_rates.adoc
@@ -3,9 +3,7 @@
 
 {product-title} allows you to create your own set of computing and storage costs to use for billing.
 
-Chargeback rates can be configured at a single rate or in tiers, where one rate is assigned to one usage range, and another rate is assigned to a different usage range.
-
-You can also assign fixed and variable rates per tier if desired.
+Chargeback rates can be configured at a single rate or in tiers, where one rate is assigned to one usage range, and another rate is assigned to a different usage range. You can also assign fixed and variable rates per tier if desired.
 
 
 == Creating a Chargeback Rate
