BZ#1334812: Scheduling OpenScap Compliance Check (added step)
The procedure for scheduling an OpenSCAP compliance check on
container images was missing a step. This commit adds that step
and single-sources the first few steps of that procedure with the
more general 'Scheduling a compliance check'.

--- a/doc-Policies_and_Profiles_Guide/topics/OpenSCAP_Integration.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/OpenSCAP_Integration.adoc
@@ -30,17 +30,7 @@ The OpenSCAP policy profile included with {product-title} is not automatically a
 
 Once you have assigned the built-in OpenSCAP policy profile to a container provider, you can schedule a compliance check against the policy profile. The method for doing is similar to that of scheduling a normal compliance check (xref:compliance-schedule[]):
 
-. Click the *Settings* accordion, and select *Schedules*.
-
-. Click image:../images/1847.png[image] (*Configuration*),
-image:../images/1862.png[image] (*Add a new Schedule*).
-
-. In the *Adding a new Schedule* area, type in a name and description for the
-schedule.
-+
-image:../images/1940.png[image]
-
-. Check *Active* to enable the scan.
+include::steps_schedule-compliance-check.adoc[]
 
 . From the *Action* dropdown, select *Container Image Analysis*.
 
