--- a/doc-Policies_and_Profiles_Guide/topics/To_schedule_a_Compliance_check.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/To_schedule_a_Compliance_check.adoc
@@ -1,19 +1,7 @@
 [[compliance-schedule]]
 ===== Scheduling a Compliance Check
 
-. Navigate to menu:Settings[Configuration].
-
-. Click the *Settings* accordion, and select *Schedules*.
-
-. Click image:../images/1847.png[image] (*Configuration*),
-image:../images/1862.png[image] (*Add a new Schedule*).
-
-. In the *Adding a new Schedule* area, type in a name and description for the
-schedule.
-+
-image:../images/1940.png[image]
-
-. Check *Active* if you want to enable this scan.
+include::steps_schedule-compliance-check.adoc[]
 
 . From the *Action* dropdown, select the type of compliance check you want to schedule. Depending on the type of analysis you choose, you are presented with one of the following group boxes:
 
