--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Security_Groups.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tagging_Security_Groups.adoc
@@ -2,7 +2,7 @@
 
 Apply tags to security groups to categorize them.
 
-. Navigate to menu:Compute[Clouds > Security Groups].
+. Navigate to menu:Networks[Security Groups].
 . Select the security group to tag.
 . Click  image:1941.png[] (*Policy*), and then  image:1851.png[] (*Edit Tags*).
 . Select a customer tag to assign from the dropdown menu.
