--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Security_Groups.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Security_Groups.adoc
@@ -3,7 +3,7 @@
 This procedure describes how to view security groups. 
 
 
-. Navigate to menu:Compute[Clouds > Security Groups]. 
+. Navigate to menu:Networks[Security Groups]. 
 . Click the desired security groups for viewing the details. 
 +
 * In *Properties*, you can view the basic information of the security group. 
