Update docs for /rates API to reflect current state

--- a/api/appendices/resource_attributes.adoc
+++ b/api/appendices/resource_attributes.adoc
@@ -56,7 +56,9 @@ POST /api/rates
 [cols="2,1,3",options="header",width="100%"]
 |=====================
 | Attribute | Type | Description
-| rate | string | Rate
+| chargeback_rate_id | integer | Reference to parent Chargeback |
+| group | string | Group rate belongs to, i.e. *cpu*, *memory*, *net_io*, *disk_io*, etc.
+| source | string | The input value for calculation, i.e. *allocated*, *used*, etc. |
 |=====================
 
 ==== Optional attributes:
@@ -67,7 +69,6 @@ POST /api/rates
 | description | string | Description of the chargeback rate
 | enabled | boolean | Rate enabled flag
 | friendly_rate | string | Friendly name of the rate
-| group | string | Group rate belongs to, i.e. *cpu*, *memory*, *net_io*, *disk_io*, etc.
 | metric | string | Metrics, i.e. *derived_memory_available*, etc.
 | per_time | string | Measured per time, *hourly*, *daily*, *weekly*, *monthly* or *yearly*
 | per_unit | string | Measured per unit, i.e. *megabytes*, *gigabytes*, etc.
