--- a/doc-Managing_Providers/topics/Configuration_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Configuration_Management_Providers.adoc
@@ -67,12 +67,12 @@ To access your Ansible Tower inventory from {product-title}, you must add Ansibl
 
 . In the *Add a new Configuration Management Provider* area:
 +
-image:Add_a_new_Configuration_Management_Provider.png[Add_Ansible_Provider]
+image:Add_Ansible_Provider.png[Add_Ansible_Provider]
 +
-.. Type a *Name* for the new provider.
+.. Enter a *Name* for the new provider.
 .. In the *Type* field, select *Ansible Tower* from the list.
-.. Type the *URL* location or IP address to the Ansible Tower server.
-. Click the *Verify Peer Certificate* checkbox if desired.
+.. Enter the *URL* location or IP address to the Ansible Tower server.
+. Select the *Verify Peer Certificate* checkbox if desired.
 . In the *Credentials* area, provide the *Username* and *Password*, and *Confirm Password*.
 
 After adding the Ansible Tower provider, refresh its relationships and power states in order to view the current inventory.
@@ -94,16 +94,13 @@ To refresh an Ansible Tower provider's inventory in {product-title}:
 . Navigate to menu:Configuration[Configuration Management > Providers].
 . Select the checkboxes for the Ansible Tower providers to refresh under *All Ansible Tower Providers*.
 . Click  image:1847.png[Configuration] (*Configuration*), and then image:2003.png[Refresh Relationships and Power States] (*Refresh Relationships and Power States*).
-+
-image:refresh.png[Refresh_Ansible_Provider]
-+
 . Click *OK*.
 
 {product-title} then queries the Ansible Tower API and obtains an inventory of all available hosts and job templates.
 
 === Viewing Ansible Tower Providers and Inventory
 
-{product-title} automatically updates its inventory from Ansible Tower. This includes system groups (known as Inventories in Ansible Tower), basic information about individual systems, and available Ansible Tower job templates to be executed from the service catalog or automate.
+{product-title} automatically updates its inventory from Ansible Tower. This includes system groups (known as Inventories in Ansible Tower), basic information about individual systems, and available Ansible Tower job templates to be executed from the service catalog or Automate.
 
 [NOTE]
 ======
@@ -114,7 +111,7 @@ To view a list of Ansible Tower providers and inventory:
 
 . Navigate to menu:Configuration[Configuration Management > Providers].
 . Under *All Configuration Manager Providers*, select the *Ansible Tower Providers* accordion menu to display a list of providers. 
-. Click your Ansible Tower provider to expand and list the inventory groups on that Ansible Tower system. The inventory groups can be expanded to view the systems contained within each group, as well as configuration details for these systems.
+. Select your Ansible Tower provider to expand and list the inventory groups on that Ansible Tower system. The inventory groups can be expanded to view the systems contained within each group, as well as configuration details for these systems.
 
 Similarly, all discovered job templates are accessed under the provider by expanding the menu:Configuration[Configuration Management > Ansible Tower Job Templates] accordion menu.
 
@@ -150,7 +147,7 @@ Then, create an Ansible Tower service catalog item:
 . Enter a *Service Dialog Name* (for example, _ansible_tower_job_)and click *Save*.
 . Navigate to menu:Services[Catalogs]. Click *Catalog Items*.
 .  Click  image:1847.png[Configuration] (*Configuration*), then  image:1862.png[Add a New Catalog Item] (*Add a New Catalog Item*) to create a new catalog item with the following details, at minimum:
-- For *Catalog Item type*, select `Ansible Tower`.
+- For *Catalog Item type*, select *Ansible Tower*.
 - Enter a *Name* for the service catalog item.
 - Check *Display in Catalog*.
 - In *Catalog*, select the catalog you created previously.
