re-added step about clicking Add.

--- a/doc-Managing_Providers/topics/Configuration_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Configuration_Management_Providers.adoc
@@ -74,6 +74,7 @@ image:Add_Ansible_Provider.png[Add_Ansible_Provider]
 .. Enter the *URL* location or IP address to the Ansible Tower server.
 . Select the *Verify Peer Certificate* checkbox if desired.
 . In the *Credentials* area, provide the *Username* and *Password*, and *Confirm Password*.
+. Click *Add*.
 
 After adding the Ansible Tower provider, refresh its relationships and power states in order to view the current inventory.
 
