Minor peer review edit

--- a/doc-Managing_Providers/topics/Configuration_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Configuration_Management_Providers.adoc
@@ -150,7 +150,7 @@ Then, create an Ansible Tower service catalog item:
 .  Click  image:1847.png[Configuration] (*Configuration*), then  image:1862.png[Add a New Catalog Item] (*Add a New Catalog Item*) to create a new catalog item with the following details, at minimum:
 - For *Catalog Item type*, select *Ansible Tower*.
 - Enter a *Name* for the service catalog item.
-- Check *Display in Catalog*.
+- Select *Display in Catalog*.
 - In *Catalog*, select the catalog you created previously.
 - In *Dialog*, select the service dialog you created previously (in this example, _ansible_tower_job_). *No Dialog* can be selected if the playbook does not require extra variables from the user. To ask the user to enter extra information when running the task, *Service Dialog* must be selected. 
 - In *Provider*, select your Ansible Tower provider. This brings up the *Ansible Tower Job Template* option and configures the *Provisioning Entry Point State Machine* automatically.
